# project-template

./: .gitignore  README.md  STRUCTURE_GUIDE.md
core/: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  project.profile.json  task.md
core/.claude/memory/: MEMORY.md  project_context.md
core/.git-hooks/: pre-commit
core/directives/: _template.md  bootstrap.md  bootstrap_project.md  loop-setup.md  loop.md  loop_parallel.md  prompt_testing.md  run_loop.md  setup_loop.md  task_management.md
core/knowledge/: ERRORS.md  SESSION.md  context.md
core/promptfoo/: promptfooconfig.yaml
core/scripts/: health_check.py
profiles/dashboard-static/: DEPLOY.md  config.example.js  help.html  index.html  style.css
profiles/dashboard-static/src/: app.js
profiles/frontend-app/: DEPLOY.md  DESIGN.md  index.html  package.json
profiles/frontend-app/src/: main.js  styles.css
profiles/hybrid-geospatial/: .env.example  DEPLOY.md  Makefile  config.example.js  help.html  index.html  pyproject.toml  style.css
profiles/hybrid-geospatial/.github/workflows/: quality.yml
profiles/hybrid-geospatial/execution/: _template.py  evaluate.py
profiles/hybrid-geospatial/src/: app.js
profiles/workflow-python/: DEPLOY.md  Makefile  pyproject.toml
profiles/workflow-python/execution/: _template.py  evaluate.py
profiles/workflow-python/src/: main.py
scripts/: bundle_framework.py  create_project.py
